css/screen.css
/*	------------------------
	Satellite

	Layout

	Design/layout by James Muspratt
	http://jamesmuspratt.com

	*/


/*	Reset ------------------ */

	html					{margin:0; padding:0;}
	body, body * 			{margin:0; padding:0; text-indent:0; text-decoration: none; outline:none;}
	body img				{border:0;}
	

/*	Utility Classes ------------------ */

	.clear 	 			{clear:both;}
	.cf:after			{content: " "; display: block; font-size: 0; clear: both; visibility: hidden;}
	
	
/*	Responsive Media ------------------ */
	
	img, video 			{max-width:100%;}
	

/*	Transitions ------------------ */

	a, .page-header, section.item	{
		-webkit-transition: 	all .3s ease;
		-moz-transition: 		all .3s ease;
		-o-transition:  		all .3s ease;
		transition: 			all .3s ease;
		}
	
	body.transition {
		-webkit-transition: 	background .75s ease;
		-moz-transition: 		background .75s ease;
		-o-transition:  		background .75s ease;
		transition: 			background .75s ease;
	}
	.sat-credit, .sat-logo, .sat-built-with		{
		-webkit-transition: 	all .3s ease;
		-moz-transition: 		all .3s ease;
		-o-transition:  		all .3s ease;
		transition: 			all .3s ease;
		}



	/*	Type ------------------ */

		body 			{font: .8em/1.5em helvetica, arial, sans-serif; color:rgb(100,100,100);  background:#eee;}

	 	h1, h2, h3, h4	{font-weight:normal; clear:both; margin:0 ;}
		h1							{font-size:1em; font-weight:bold;}
	 	h2 							{ font-weight:bold; color:#999;}
	 	h3							{font-style:italic; margin-bottom:0;}
		h4							{display:inline;}
	 	p 							{font-size:1em; margin-bottom:1em;}


		a				{color:#2d9af6;}
		a:hover 		{color:#aaa; }


/*	Layout ------------------ */
	
	body 	{padding:0 8%;}
	.main 	{position:relative;}
	
	
	header.primary, .main, footer	{max-width:1500px; margin:0 auto; position:relative; }
	header.primary					{padding:2em 0 .5em 0; margin-bottom:20px;}
	
/*	General ------------------ */

	.page-header 								{margin-bottom:2em;}
	.page-header h1 						{font-size:1.5em; line-height:1.5em; font-weight:normal;}
	.page-header h5							{margin-bottom:1em;}
	header.primary a, .button		{font-size:10px; font-weight:bold; display:inline-block; color:#979797; padding:2px 8px;  position:relative;}
	.button											{background:rgba(0,0,0,.05);}


	/*	Header & Nav ------------------ */
		
	header.primary h1, nav.primary		{display:inline-block; margin-right:1em; }
	header.primary h1 a 							{padding-left:0; padding-right:0; }
	nav.primary												{margin-bottom:1em; padding-top:.2em; }
	nav.primary ul 										{list-style:none; display:inline-block; }
	nav.primary li 										{display:inline-block; margin:0;}
	
	header.primary nav a							{border-bottom:2px solid rgba(0,0,0,.1); }
	header.primary nav li.current a		{color:#000; border-color:rgba(0,0,0,.3);}
	
	header.primary nav li:first-child a			{padding-left:0;}
	header.primary nav li:last-child a			{padding-right:0;}
	nav a:hover, a.button:hover				{color:#555;}
	p.mode-trigger a:before						{content:"❑ "; }
	p.mode-trigger a.active:before		{content:"❒ ";}
	
	


/*	Home Page ------------------ */

	.paging p {font-size:.8em; line-height:1.5em;}
	li.newer  span:before	{content: "‹ ";}
	li.older 							{text-align:right;}
	li.older  span:after		{content: " ›";}
	
	
/*	Home ------------------ */

	.thumbs 										{list-style:none;}
	.thumbs li 									{float:left; display:block; overflow:hidden; position:relative;}
	.thumbs li 									{width:48%;  margin-right:4%; margin-bottom:10px;}
	.thumbs li:nth-child(2n-1)		{clear:both;}
	.thumbs li:nth-child(2n) 		{margin-right:0;}
	
	.thumbs li img					{max-height:135px;}
	.thumbs li.video:after			{content: "video"; position:absolute; display:inline-block; padding:3px 5px; top:0; left:0; background:rgba(0,0,0,.5); color:#fff; font:bold .7em/1em arial, sans-serif;; text-transform:uppercase;}
	
	.paging 					{margin:0; }
	.paging p					{float:left; width:45%;}
	.paging ul 				{list-style:none; float:right; width:45%; text-align:right;}
	.paging li 				{display:inline-block;}


/*	View Page (individual photo) ------------------ */
	
	.item																{margin-bottom:1em;}
	.photo-title-desc										{margin-bottom:1em; }
	.meta 															{padding-bottom:.5em;}
	.meta p 														{font-size:.8em; margin-bottom:.5em; /*line-height:1.2em;*/}

	nav.photo-prev-next									{border-top:3px solid rgba(0,0,0,.03); margin:1.0em 0; padding:2em 0;  }
	nav.photo-prev-next ul							{list-style:none;}
	nav.photo-prev-next li							{display:inline-block;}
	nav.photo-prev-next li img 					{display:inline-block;  padding:8px 0 0 0;}
	nav.photo-prev-next li.prev 				{text-align:right;}
	nav.photo-prev-next li:first-child	{margin-right:20px;}
	nav.photo-prev-next li a.button			{display:block;}

	aside.sidebar .title-desc						{margin-bottom:3em;}

	
/*	Sets Page ------------------ */

	.thumbs.photosets li								{box-shadow: 0 0 2px rgba(0,0,0,.1); margin-bottom:20px; background:#fff;}
	.thumbs.photosets li img						{display:block;}
	.thumbs.photosets li a							{display:block;}
	.set-text 													{margin:0; line-height:1.4em; padding:.5em 5% .5em 5%; }
	.thumbs.photosets li h4							{margin-bottom:0;}
	.thumbs.photosets li h5							{color:#979797; font-size:.8em; line-height:1.2em; font-weight:normal;}
	.thumbs.photosets li a:hover				{color:#aaa;}
	

/*	Tags Page  ------------------ */

	.tag-list 		{list-style:none; -moz-column-count:2; -webkit-column-count:2; column-count:2;}
	.tag-list li 	{font-size:1.5em; line-height:2em;}


/*	Footer ------------------ */

	footer {clear:both; margin-top:2em;}
	footer p {font-size:.8em; color:#888;}

	/*	Credit/Logo */
	.sat-credit												{position:relative;  width:30em; position:relative;}
	.sat-logo													{position:relative; display:inline-block; color:#999; margin-left:-1em; width:1em; height:1em; padding:1em; border-radius:3em;  text-align:center; font-weight:bold; font-size:1.75em; }
	.sat-logo sup 										{position:absolute; right:.35em; top:.35em; }
	.sat-built-with										{left:0; position:absolute; opacity:0; display:inline-block;/* background:rgba(0,0,0,.05); */padding:0 2em;}
	.sat-credit:hover	.sat-logo 			{background:rgba(0,0,0,.05); }
	.sat-credit:hover .sat-logo sup		{opacity:0;}
	.sat-credit:hover .sat-built-with {opacity:1; left:2.25em;}


/*	Viewing Mode------------------ */

	body.mode 														{background:#222;}
	body.mode header.primary nav a							{border-color:rgba(255,255,255,.1);}
	body.mode header.primary nav li.current a		{color:#fff; border-color:rgba(255,255,255,.3);}
	
	body.mode section.item								{width:100%;}
	body.mode .thumbs.photosets	li				{height:145px; padding:0; background:none; box-shadow:none;}
	body.mode .thumbs.photosets li h4, 
	body.mode .thumbs.photosets li h5 		{display:none;}
	body.mode .set-text 									{background:none;}
	body.mode nav.photo-prev-next					{position:absolute; top:-35px; right:0; margin:0; padding-top:0; border:0; ;}
	body.mode nav.photo-prev-next img,  
		body.mode nav.photo-prev-next br 		{display:none;}
	body.mode nav.photo-prev-next li a.button 		{padding-top:2px; background:rgba(0,0,0,.05); }
	body.mode .photo-title-desc, body.mode .page-header, 	body.mode .meta				{display:none;}





		/* --------------- Breakpoint 2:  --------------- */

			@media screen and (min-width: 750px) {
			body:after {content: "2"; display:none;} /* flag for javascript */
			body {padding:0 5%;}
			
			nav.primary								{float:left; width:70%;}
			p.mode-trigger 						{float:right; width:28%; text-align:right;}
			                    			
			.item		 									{float:left; width:68%;}
			aside.sidebar 						{float:right; width:30%;}
			
			.thumbs li 								{width:200px; height:140px; overflow:hidden; margin-right:10px; margin-bottom:10px;}
			.thumbs li:nth-child(2n-1)	{clear:none;}
			.thumbs li:nth-child(2n) 	{margin-right:10px;}
			
			.thumbs.photosets li	 	{height:200px; }
			
			.tag-list 		{-moz-column-count:3; -webkit-column-count:3; column-count:3;}
			

			} /* 2 */
	
	
		/* ---------------  Breakpoint 3:  --------------- */
		@media screen and (min-width: 1000px) {
			
			body:after							{content: "3"; display:none;} /* flag for javascript */
			.item		 								{width:74%;}
			aside.sidebar 					{width:24%;}
			.tag-list 							{-moz-column-count:4; -webkit-column-count:4; column-count:4;}
	
			
			} /* 3 */


		/* ---------------  Breakpoint 4  --------------- */
		@media screen and (min-width: 1300px) {
		
			body:after							{content: "4"; display:none;} /* flag for javascript */
			.item		 								{width:78%;}
			aside.sidebar 					{width:20%;}
			.tag-list 							{-moz-column-count:5; -webkit-column-count:5; column-count:5;}

		
			} /* 4 */	
	

	
			/*	Retina ------------------ */


			@media screen and (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) { 

				}  /* end retina */

		
		
			/*	Clean up ------------------ */
	
			@media screen and (max-device-width: 480px), screen and (max-width: 600px) {
	
				/* 	Fix iOS and Windows Mobile font-size changes */
				html {-ms-text-size-adjust: none;-webkit-text-size-adjust: none;}
		
			} /* clean up */

